--- a/main.ipynb
+++ b/main.ipynb
@@ -214,6 +214,7 @@
     "        \n",
     "        iterations_ran += 1\n",
     "        \n",
+    "        #making visualization optional to speed up repeated iteration\n",
     "        if vis == True:\n",
     "            # Plots the world\n",
     "            plt.imshow(world.T, origin='lower', aspect='equal');\n",
