made some default values better, everything working well afaik. good preliminary results

--- a/ProjectReport.ipynb
+++ b/ProjectReport.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
        "['draw', 'move']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
        "['closest_available_driver', 'draw']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -214,9 +214,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wait times were [4, 4, 8, 3, 3, 3, 4, 7, 5, 0, 0, 9, 8, 5, 6, 8, 17, 5, 10, 7, 9, 4, 14]\n",
-      "Ride times were [9, 13, 5, 13, 15, 11, 13, 7, 14, 17, 32, 14, 13, 19, 24, 15, 4, 8, 14, 3, 13, 20, 17]\n",
-      "Dropped riders: 2\n"
+      "Wait times were [2, 3, 5, 1, 1, 8, 3, 3, 4, 6, 1, 9, 4, 3, 2, 7, 8, 12]\n",
+      "Ride times were [5, 3, 11, 19, 23, 3, 15, 19, 19, 22, 16, 13, 23, 33, 23, 21, 10, 4]\n",
+      "Dropped riders: 7\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 4, 8, 3, 3, 3, 4, 7, 5, 0, 0, 9, 8, 5, 6, 8, 17, 5, 10, 7, 9, 4, 14]\n"
+      "[2, 3, 5, 1, 1, 8, 3, 3, 4, 6, 1, 9, 4, 3, 2, 7, 8, 12]\n"
      ]
     },
     {
@@ -252,7 +252,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-fee7feb27f3d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-fee7feb27f3d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
      ]
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -360,18 +360,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IVV: [0.5, 0.6, 0.9]\n",
-      "Waits: [9.0, 9.25, 8.722222222222223]\n",
-      "Rides: [25.0, 20.25, 17.72222222222222]\n",
-      "Drops: [20.0, 21.0, 28.0]\n"
+      "IVV: [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]\n",
+      "Waits: [30.88888888888889, 39.06944444444444, 39.53114478114478, 38.16919191919192, 42.06868686868687, 43.11973905723905, 44.120490620490614, 43.25126262626262, 42.001122334455665]\n",
+      "Rides: [45.0, 49.375, 47.31060606060606, 46.25378787878788, 49.50303030303031, 51.75252525252525, 52.2521645021645, 50.31439393939394, 51.29057239057239]\n",
+      "Drops: [43.0, 65.5, 90.66666666666667, 111.75, 140.0, 165.33333333333334, 190.0, 214.0, 240.44444444444446]\n"
      ]
     }
    ],
    "source": [
     "# Conducting experiment 1.\n",
     "from UberModel import experiment\n",
-    "\n",
-    "IV_vals, waits, rides, drops = experiment(independent_variable = 'rider', IV_vals = [.5,.6,.9], x_dim = 25, y_dim = 25, iterations = 50, vis = False)\n",
+    "probs = [.1,.2,.3,.4,.5,.6,.7,.8,.9]\n",
+    "IV_vals, waits, rides, drops = experiment(independent_variable = 'rider', IV_vals = probs, x_dim = 70, y_dim = 70, iterations = 500, vis = False)\n",
     "\n",
     "print(\"IVV:\", IV_vals)\n",
     "print(\"Waits:\", waits)\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -389,16 +389,28 @@
     {
      "data": {
       "text/plain": [
-       "[False, False, False]"
+       "<matplotlib.collections.PathCollection at 0x7f955809a160>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXUAAAEACAYAAABMEua6AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE1VJREFUeJzt3X+M5Hd93/Hn63w/tFQ+1443QLmwG6dyLkE42HUMaiKY\nMz3VGMWgqGogCi7JpS21Qq0WmWJS61ZRkziRkNuqdSXE0Zo/uBwJIbitLdvUN1RBnHOFM3eNbWLS\n7BUc2QwmcdXeYa9z7/6xc/b6uLuduZ0fe597PqSRvvOdz3e+b300+5rPfuY7n0lVIUlqw4ZpFyBJ\nGh1DXZIaYqhLUkMMdUlqiKEuSQ0x1CWpIQOHepINSb6a5N4V+z6Y5PEkR5LcOZ4SJUmD2jhE21uB\nx4CtAEl2AD8DvLGqXkxy+RjqkyQNYaCRepJtwI3AJ1bs/gBwZ1W9CFBV3xl9eZKkYQw6/XIXcBuw\n8uunVwJvTXIgyf4k1468OknSUFYN9STvBJ6pqkeBrHhoI3BpVb0F+DDwmfGUKEka1CBz6j8F3JTk\nRmAGuDjJp4BvAr8PUFUHk5xI8gNV9ezKg5O4uIwknYOqyuqtXmnVkXpVfbSqXl9VVwDvAR6uqpuB\nzwPXAyS5Eth0aqCveA5vVezevXvqNayXm31hX9gXZ7+dq2GufjnVJ4FPJjkCPA/cvIbnkiSNwFCh\nXlVfBL7Y314C3jeOoiRJ58ZvlE5Qp9OZdgnrhn3xMvviZfbF2mUtczcDnSCpcZ9DklqThBrHB6WS\npPOHoS5JDTHUJakhhrokNcRQl6SGGOqS1BBDXZIaYqhLUkMMdUlqiKEuSQ0x1CWpIYa6JDXEUJek\nhhjqktQQQ12SGmKoS1JDDHVJasjAoZ5kQ5KvJrn3lP0fSnIiyWWjL0/SuPV6PQ4ePEiv15t2KRqB\nYUbqtwKPrdyRZBuwEzg6yqIkTcbevfuYm9vOzp0fYG5uO3v37pt2SVqjgX6jtB/e/xH4deCfV9VN\n/f2/C/wacC/wt6rqu6c51t8oldahXq/H3Nx2jh/fD1wFHGZmZgdHjz7B7OzstMu74I37N0rvAm4D\nXkrnJO8CvllVR4Y9qaTpW1xcZPPmeZYDHeAqNm2aY3FxcXpFac1WDfUk7wSeqapHgfT3zQC3A7tX\nNh1LhZLGYn5+nhdeWAQO9/ccZmnpKPPz89MrSmu2cYA2PwXclORGYAa4GPgUMA98LUmAbcBXklxX\nVd8+9QkWFhZe2u50OnQ6nTUXLmltZmdn2bPnbnbt2sGmTXMsLR1lz567nXqZkm63S7fbXfPzDDSn\n/lLj5G3Ah07Oqa/Y/2fANVX1F6c5xjl1aR3r9XosLi4yPz9voK8j5zqnPshIfRCF0y/SeWl2dtYw\nb8hQI/VzOoEjdUka2rivfpEknQcMdUlqiKEuSQ0x1CWtC65BMxqGuqSpcw2a0fHqF2mKvEbcNWjO\nxKtfpPOMo9NlrkEzWo7UpSlwdPoy++L0HKlL5xFHpy87uQbNzMwOtm69hpmZHa5BswaO1KUpcHT6\n/fx84ZWmvfaLpCG4QuL3cw2a0XCkLk2Ro1OdybmO1A11SVqH/KBUkmSoS1JLDHVJaoihLkkNMdQl\nqSGGuiQ1ZOBQT7IhyaEk9/bv/3aSx5M8muSzSbaOr0xptFy7W60aZqR+K/DHK+4/CLyhqt4EPAnc\nPsrCpHFxdUSdSQtv9gOFepJtwI3AJ07uq6ovVNWJ/t0DwLbRlyeNVq/XY9euWzh+fD/PPfcVjh/f\nz65dt5zXf8QajVbe7Acdqd8F3Aac6auhvwTcP5KKpDFydUSdTktv9qsu6JXkncAzVfVokg6QUx7/\nVWCpqj59pudYWFh4abvT6dDpdM6xXGlt5ufneeGFReAwJ1dHXFo6yvz8/FTr0nSdfLM/fvz73+wn\ntSZPt9ul2+2u+XlWXfslyW8AvwC8CMwAFwO/X1U3J3k/8A+B66vq+TMc79ovWlf27t3Hrl23vGJ1\nxPe+9+emXZamaD0uhTyRBb2SvA34UFXdlOQG4GPAW6vq2bMcY6hr3XF1RJ1qvb3ZTyPUnwQ2AycD\n/UBV3XKaYwx1SeeF9fRm79K7ktQQl96VJBnqktQSQ12SGmKoS1JDDHVJaoihLkkNMdQlqSGGuiQ1\nxFCXpIYY6pLUEENdkhpiqEtSQwx1SWqIoS5JDTHUJakhhrokNcRQl6SGGOqS1BBDXZIaMnCoJ9mQ\n5KtJ7u3fvzTJg0m+nuSBJJeMr0xJ0iCGGanfCjy24v5HgC9U1Y8CDwO3j7IwSdLwBgr1JNuAG4FP\nrNj9LuCe/vY9wLtHW5okaViDjtTvAm4DasW+V1fVMwBV9TTwgyOuTZI0pI2rNUjyTuCZqno0Secs\nTetMDywsLLy03el06HTO9jSSdOHpdrt0u901P0+qzpjFyw2S3wB+AXgRmAEuBj4HXAt0quqZJK8B\n9lfVj53m+FrtHJKkV0pCVWXY41adfqmqj1bV66vqCuA9wMNV9T7gPwPv7zf7B8Dnhz25JGm01nKd\n+p3AziRfB97evy9JmqJVp1/WfAKnX9aNXq/H4uIi8/PzzM7OTrscSWcxtukXtWHv3n3MzW1n584P\nMDe3nb179027JElj4Ej9AtDr9Zib287x4/uBq4DDzMzs4OjRJxyxS+uUI3Wd0eLiIps3z7Mc6ABX\nsWnTHIuLi9MrStJYGOoXgPn5eV54YRE43N9zmKWlo8zPz0+vKEljYahfAGZnZ9mz525mZnawdes1\nzMzsYM+eu516kRrknPqErIcrT9ZDDZIGc65z6ob6BOzdu49du25h8+blaZA9e+7mve/9uWmXJWkd\nM9TXKa88kXQuvPplnfLKE0mTZKiPmVeeSJokQ33MvPJE0iQ5pz4hXnkiaRh+UCpJDfGDUkmSoS5J\nLTHUJakhhrokNcRQl6SGGOqauF6vx8GDB+n1etMuRWrOqqGeZEuSR5IcSnIkye7+/p9I8uX+/j9K\ncu34y9X5zp/Vk8ZroOvUk7yqqo4luQj4EnAr8GvAx6rqwSTvAD5cVTtOc6zXqQtwcTNpGGO9Tr2q\njvU3twAbgRP92yX9/X8deGrYk+vC4uJm0vhtHKRRkg3AV4AfAf59VR1M8s+AB5J8DAjwt8dXplrw\nysXNlkfqLm4mjdZAoV5VJ4Crk2wFPpfkDcA/Am6tqj9I8veATwI7T3f8wsLCS9udTodOp7PGsnU+\nOrm42a5dO9i0aY6lpaMubib1dbtdut3ump9n6LVfktwBHAP+ZVVdumL/c1V1yWnaO6euV3BxM2l1\n5zqnvupIPcnlwFJVPZdkhuXR+J3Anyd5W1V9McnbgT8ZumpdkGZnZw1zaUwGmX55LXBPf159A7Cv\nqu5L8hzwb/pXxHyP5ekYSdIUufSuJK1DLr0rSTLUJaklhrokNcRQl6SGGOqS1BBDXZIaYqhLUkMM\ndUlqiKEuSQ0x1CWpIYa6JDXEUJekhhjqktQQQ12SGmKoS1JDDHVJaoihLkkNMdQlqSGGuiQ1ZNVQ\nT7IlySNJDiU5kmT3isc+mOTx/v47x1uqJGk1G1drUFXPJ9lRVceSXAR8Kcn9wKuAnwHeWFUvJrl8\n3MVKks5uoOmXqjrW39zC8htBAf8EuLOqXuy3+c5YKpQkDWygUE+yIckh4Gngoao6CFwJvDXJgST7\nk1w7zkIlSatbdfoFoKpOAFcn2Qp8Lskb+sdeWlVvSfKTwGeAK053/MLCwkvbnU6HTqezxrIlqS3d\nbpdut7vm50lVDXdAcgdwDHg78FtV9cX+/m8Ab66qZ09pX8OeQ5IudEmoqgx73CBXv1ye5JL+9gyw\nE3gc+APg+v7+K4FNpwa6JGmyBpl+eS1wT5INLL8J7Kuq+5JsAj6Z5AjwPHDzGOuUJA1g6OmXoU/g\n9IskDW1s0y+SpPOHoS5JDTHUJakhhrokNcRQl6SGGOqS1BBDXZIaYqhLUkMMdUlqiKEuSQ0x1CWp\nIYa6JDXEUJekhhjqktQQQ12SGmKoS1JDDHVJaoihLkkNMdQlqSGrhnqSLUkeSXIoyZEku095/ENJ\nTiS5bHxlSpIGsXG1BlX1fJIdVXUsyUXAl5LcX1V/lGQbsBM4OvZKJUmrGmj6paqO9Te3sPxGUP37\ndwG3jaEuSdI5GCjUk2xIcgh4Gnioqg4muQn4ZlUdGWuFkqSBrTr9AlBVJ4Crk2wFPpfkjcBHWZ56\nOSlnOn5hYeGl7U6nQ6fTOZdaJalZ3W6Xbre75udJVa3eauUByR0sT7/8CnCM5TDfBjwFXFdV3z6l\nfQ17Dkm60CWhqs44WD6TQa5+uTzJJf3tGZZH51+tqtdU1RVV9cPAt4CrTw10SdJkDTL98lrgniQb\nWH4T2FdV953SpjjL9IskaTKGnn4Z+gROv0jS0MY2/SJJOn8Y6pLUEENdkhpiqEtSQwx1SWqIoS5J\nDTHUJakhhrokNcRQl6SGGOqS1BBDXZIaYqhLUkMMdUlqiKEuSQ0x1CWpIYa6JDXEUJekhhjqktSQ\nQX54ekuSR5IcSnIkye7+/t9O8niSR5N8NsnW8ZcrSTqbgX6jNMmrqupYkouALwH/FNgKPFxVJ5Lc\nCVRV3X6aY/2NUkka0lh/o7SqjvU3twAbl3fVF6rqRH//AWDbsCeXJI3WQKGeZEOSQ8DTwENVdfCU\nJr8E3D/q4iRJwxl0pH6iqq5meTT+5iQ/fvKxJL8KLFXVp8dUoyRpQBuHaVxV/yfJfuAG4LEk7wdu\nBK4/23ELCwsvbXc6HTqdzrB1SlLTut0u3W53zc+z6gelSS5neST+XJIZ4AHgTuAE8DHgrVX17FmO\n94NSSRrSuX5QOshI/bXAPUk2sDxds6+q7kvyJLAZeCgJwIGqumXYAiRJozPQJY1rOoEjdUka2lgv\naZQknR8MdUlqiKEuSQ0x1CWpIYa6JDXEUJekhhjqktQQQ12SGtJ8qPd6PQ4ePEiv15t2KZI0dk2H\n+t69+5ib287OnR9gbm47e/fum3ZJkjRWzS4T0Ov1mJvbzvHj+4GrgMPMzOzg6NEnmJ2dnXg9kjQM\nlwk4xeLiIps3z7Mc6ABXsWnTHIuLi9MrSpLGrNlQn5+f54UXFoHD/T2HWVo6yvz8/PSKkqQxazbU\nZ2dn2bPnbmZmdrB16zXMzOxgz567nXqR1LRm59RP6vV6LC4uMj8/b6BLOm+c65x686EuSecjPyiV\nJBnqktQSQ12SGrJqqCfZkuSRJIeSHEmyu7//0iQPJvl6kgeSXDL+ciVJZ7NqqFfV88COqroaeBPw\njiTXAR8BvlBVPwo8DNw+1kob0O12p13CumFfvMy+eJl9sXYDTb9U1bH+5hZgI1DAu4B7+vvvAd49\n8uoa4wv2ZfbFy+yLl9kXazdQqCfZkOQQ8DTwUFUdBF5dVc8AVNXTwA+Or0xJ0iAGHamf6E+/bAOu\nS/IGlkfrr2g26uIkScMZ+stHSe4AjgG/DHSq6pkkrwH2V9WPnaa9YS9J52As3yhNcjmwVFXPJZkB\nHgDuBN4GfLeqfivJvwAuraqPnEPdkqQRGSTU38jyB6Eb+rd9VfXrSS4DPgP8EHAU+PtV9ZdjrleS\ndBZjX/tFkjQ5I/tGaZIbkjyR5E/60zGna/NvkzyZ5NEkbxrVudeb1foiyc8n+Vr/9of9/4aaM8hr\not/uJ5MsJfnZSdY3SQP+fXT6X/L7n0n2T7rGSRng72Nrknv7OXEkyfunUOZEJNmT5Jkkh8/SZrjc\nrKo131h+c/gGMAdsAh4Ftp/S5h3Af+1vvxk4MIpzr7fbgH3xFuCS/vYNLfbFIP2wot1/A/4L8LPT\nrnuKr4lLgD8GXte/f/m0655iX9wO/ObJfgCeBTZOu/Yx9cdPs/ylzsNneHzo3BzVSP064MmqOlpV\nS8DvsPzlpJXeBXwKoKoeAS5J8uoRnX89WbUvqupAVT3Xv3sAeN2Ea5yEQV4TAB8Efg/49iSLm7BB\n+uLngc9W1VMAVfWdCdc4KYP0RQEX97cvBp6tqhcnWOPEVNUfAn9xliZD5+aoQv11wDdX3P8W3x9U\np7Z56jRtWjBIX6z0y8D9Y61oOlbthyR/A3h3Vf0HYOhLt84jg7wmrgQuS7I/ycEk75tYdZM1SF/8\nO+DHk/w58DXg1gnVth4NnZsbx1qOzirJDuAXWf4X7EL0r4GVc6otB/tqNgLXANcDfw34cpIvV9U3\nplvWVPxd4FBVXZ/kR4CHklxVVf932oWdD0YV6k8Br19xf1t/36ltfmiVNi0YpC9IchXwceCGqjrb\nv1/nq0H64Vrgd5KE5bnTdyRZqqp7J1TjpAzSF98CvlNV3wO+l+S/Az/B8vxzSwbpi18EfhOgqv40\nyZ8B24H/MZEK15ehc3NU0y8Hgb+ZZC7JZuA9wKl/mPcCNwMkeQvwl9VfO6Yxq/ZFktcDnwXeV1V/\nOoUaJ2HVfqiqK/q3H2Z5Xv2WBgMdBvv7+Dzw00kuSvIqlj8Ue3zCdU7CIH1xFPg7AP354yuB/zXR\nKicrnPm/1KFzcyQj9ar6qyS/AjzI8hvFnqp6PMk/Xn64Pl5V9yW5Mck3gP/H8rtxcwbpC+AO4DLg\n7v4odamqrpte1aM3YD+84pCJFzkhA/59PJHkAeAw8FfAx6vqsSmWPRYDvi7+FfCfVlzm9+Gq+u6U\nSh6rJJ8GOsAPJPnfwG5gM2vITb98JEkN8efsJKkhhrokNcRQl6SGGOqS1BBDXZIaYqhLUkMMdUlq\niKEuSQ35//76ItTTE7QdAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f955852a908>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "[x > 1 or x <= 0 for x in [.2, .4, .6]]"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.scatter(IV_vals, waits)"
    ]
   },
   {
@@ -456,6 +468,24 @@
     "\n",
     "These are just a few of the potential features we could add to make the model more compelling and powerful. Luckily, by using programming paradigms such as OOP and Agent Based Modeling, we have created a base that will be easy to tweak and iterate upon. This kind of Agent Based model could serve as inspiration for other services where both the workforce and customer base is in flux with seasonality, such as Airbnb."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
