--- a/ProjectReport.ipynb
+++ b/ProjectReport.ipynb
@@ -188,13 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from UberModel import run"
+    "from UberModel import run\n"
    ]
   },
   {
