Project report finished

--- a/ProjectReport.ipynb
+++ b/ProjectReport.ipynb
@@ -13,6 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### [Link to PowerPoint Presentation](https://docs.google.com/presentation/d/1JqX2LjVRQ0ExfyaPlTIoU843ypvuBYOFMmg2R_1QFbk/edit#slide=id.gc6f73a04f_0_0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## _Outline_\n",
     "\n",
     "### 1. Motivation  \n",
@@ -61,7 +68,12 @@
     "\n",
     "Our first objective was to design and implement a simulation of Uber's ridesharing service. We wanted to utilize programming and modeling techniques learned in class to make the model flexible and easy to iterate upon should we want to add features and conduct different experiments.\n",
     "\n",
-    "Secondly, we set out to apply experimental procedures to observe the effect of varying conditions on the behavior outcomes of the model. \n",
+    "Secondly, we set out to apply experimental procedures to observe the effect of varying conditions on the behavior outcomes of the model.  \n",
+    "\n",
+    "In order to accomplish these goals we assigned work as follows:  \n",
+    "    **MacKenzie:** Mostly work on the run() function as well as help to create the two class functions.  \n",
+    "    **Katrina:** Create initial run() and class functions, and create the visualization.  \n",
+    "    **Adhi:** Implement the experimental part of our model, as well as be the main writer for the project report.\n",
     "\n",
     "---"
    ]
@@ -127,7 +139,7 @@
    ],
    "source": [
     "from UberModel import driver\n",
-    "# list functions here, or below idk\n",
+    "# list of functions\n",
     "dir(driver)[-2:]"
    ]
   },
@@ -169,7 +181,7 @@
    ],
    "source": [
     "from UberModel import rider\n",
-    "# list functions here, or below idk\n",
+    "# list of functions\n",
     "dir(rider)[-2:]"
    ]
   },
@@ -178,9 +190,9 @@
    "metadata": {},
    "source": [
     "#### **`rider.closest_available_driver()`:**  \n",
-    "# Something something something.\n",
+    "The `closest_available_driver` function uses a a list of available drivers to calculate the distance between the rider and all available drivers and assigns the closest driver to the rider. It returns the closest driver and their location.\n",
     "#### **`rider.draw()`:**  \n",
-    "# Something"
+    "The `draw` function adds the rider's location as a yellow scatterplot dot on the output graph."
    ]
   },
   {
